--- a/pages/p6/951917.md
+++ b/pages/p6/951917.md
@@ -1,4 +1,4 @@
-### 巨亏百亿 1元卖身 一代“国民轿车”陨落(图)
+### 脑残是如何发生的？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="国民轿车 汽车 一汽 夏利" src="https://img3.secretchina.com/pic/2020/9-21/p2780341a595043120-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="我再强调一次：白是黑的，黑是白的！" src="https://img3.secretchina.com/pic/2020/11-10/p2814801a922447022-ss.jpg"/>
   <br>
-   一汽夏利（现*ST夏利）因巨亏百亿，资产被1元甩卖。（图片来源：NaBUru38/WIKI/CC BY-SA）
+   我再强调一次：白是黑的，黑是白的！（网络图片）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,60 +21,52 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月21日讯】（看中国记者丁晓雨综合报导）一边是特斯拉新能源车在中国的狂飙突进，一边是国产车企的溃不成军，中国
+  首先要说的是，
   <strong>
-   汽车
-  </strong>
-  市场的冰火两重天正在上演。继被网友讥为“保时泰”的众泰被申请重整后，日前，曾经的“
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/国民轿车" target="_blank">
-    国民轿车
+   <span href="https://www.secretchina.com/news/gb/tag/脑残" target="_blank">
+    脑残
    </span>
   </strong>
-  ”
+  是真实存在的。举个例子，在
   <strong>
-   一汽夏利
+   文革
   </strong>
-  （现*ST夏利）因巨亏百亿，资产被1元甩卖。
+  中，两口子由于政治观点不一致，加入了不同的造反组织，最后走到离婚的地步。如果放到今天来想，这算什么？还有比夫妻关系，家庭，老婆孩子更重要的吗？值得吗？但这样的事情就是真实发生过。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  靠着卖资产等方式苦苦支撑了8年，亏损超过100亿元的上市公司*ST夏利，终于再也撑不下去了。拟将相当于目前所有资产和负债作价1元，卖给
-  <span href="https://www.secretchina.com/news/gb/tag/一汽" target="_blank">
-   一汽
+  这还不是脑残吗？问题是，这样的事情是如何发生的？是一种什么样的思维支配了人们的行为？
+ </p>
+ <p>
+  脑残不是一般所说的“
+  <span href="https://www.secretchina.com/news/gb/tag/傻" target="_blank">
+   傻
   </span>
-  股份。而目前*ST夏利净资产为-15亿元，最新市值为66亿元。同时*ST夏利向中国铁物、铁物股份等发行股份购买注入新的资产，上市公司的控股股东和主业将发生变更。
+  ”。因为一般的傻，往往是往里傻不往外傻，即一般的傻是自私的，也是为自己考虑的。因为这符合人的本性。脑残的特征是荒唐，是荒谬。由此说，脑残是一种被控制的思维。
  </p>
  <p>
-  据《中国基金报》报导，9月17日，*ST夏利（
-  <span href="https://zh.wikipedia.org/wiki/天津一汽夏利汽车" target="_blank">
-   一汽夏利
+  如何控制一个人的思维？由浅及深地说，有三种方式。
+ </p>
+ <p>
+  一是把一种结论强加给你，不接受将会遭到惩罚。
+ </p>
+ <p>
+  二是改变你想问题的方式，即提供给你特定的
+  <span href="https://www.secretchina.com/news/gb/tag/框架" target="_blank">
+   框架
   </span>
-  ）发布15份重磅公告，主要内容为重大资产出售及发行股份购买资产并募集配套资金暨关联交易。
- </p>
- <p>
-  公告表示，上市公司拟向一汽股份出售鑫安保险17.5%股权及承接截至评估基准日除鑫安保险17.5%股权及留抵进项税以外的全部资产和负债的
-  <span href="https://www.secretchina.com/news/gb/tag/夏利" target="_blank">
-   夏利
-  </span>
-  运营100%股权，一汽股份指定一汽资产为资产承接方。
- </p>
- <p>
-  公告表示，按上述路径实施完成后，不考虑本次重组置入资产，一汽夏利除拥有的母公司留抵进项税（截至评估基准日金额为511,923,567.43元）及因向夏利运营补偿而产生的与母公司留抵进项税等额的债务外，不存在任何其他资产和负债。
- </p>
- <p>
-  公告表示，鉴于拟出售资产整体经营状况不佳，经各方协商且参考上述评估值，拟出售资产的交易价格确定为1元，由一汽股份指定资产承接方向一汽夏利直接支付，并视过渡期损益的专项审计结果确定是否向一汽夏利进行补偿。
+  。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -89,11 +81,7 @@
   </div>
  </center>
  <p>
-  至此，A股再无夏利
-  <span href="https://zh.wikipedia.org/wiki/汽车" target="_blank">
-   汽车
-  </span>
-  。作为中国最早的“国民轿车”，曾经连续18年销量夺冠，2011年还有25.3万辆的销量，如今竟沦落到1块钱把自己卖了。
+  三是控制你想问题时所需要的资源或材料。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,7 +96,7 @@
   </div>
  </center>
  <p>
-  据一汽夏利统计数据显示，1996年，国内有8成以上出租车为夏利车型；2004年，夏利产量突破100万辆，成为第一个产量过百万的民族轿车品牌；2005年底，夏利成为国内第一个销量突破20万辆的轿车企业；2011年，一汽夏利年销量达25.3万辆，营收99.54亿元。
+  第一种很简单，不说了。第二种，改变你想问题的方式。最主要的是提供一种新的思想框架。人们在面对特定的情景的时候，都有一个加框架的过程，即有人所说的改变框架过程。改变了这个框架，你对一些问题的看法就不一样了。意识形态是干什么用的，就是干这个用的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +111,7 @@
   </div>
  </center>
  <p>
-  公告表示，上市公司整车生产业务停滞，最近两年及一期持续发生大额亏损，截至2020年3月31日净资产为-14.86亿元；同时预计拟出售资产过渡期内仍将维持大额亏损，置出资产评估值加过渡期损益预计为负。
+  但我觉得最具奥妙的是第三种，即控制你想问题时所用的资源。加框架是需要资源的，没有资源怎么加？当你用来进行思考的资源是非常有限的时候，只能集中在一根筋上。过去历次政治运动中搞的移风易俗，斗私批修等是为了什么，就是“净化”你想问题时的资源。当然，最重要的是信息的控制。有什么米就只能做什么饭了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,7 +126,7 @@
   </div>
  </center>
  <p>
-  从2012年到2020年上半年，夏利扣非净利润连亏8年半，6个年度亏损在10亿元以上，合计亏损超100亿元。而在2000年到2011年间，虽然比较辉煌过，但净利润最高的2003年，也就净赚3.5个亿。
+  当然，所有这一切起作用的条件，是形成一种大氛围。大氛围的作用是打掉自我。为什么在是否脑残的问题上，会显现出个体的差异，就在自我被打掉的程度不同。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,7 +145,7 @@
   </ins>
  </center>
  <p>
-  逐年亏损的夏利，后来只能靠变卖资产度日。随着新能源车造车新势力崛起，夏利也曾寄望于通过造车新势力摆脱困境，但最终未能如愿。
+  下面具体讨论一下后两种方式。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,11 +160,10 @@
   </div>
  </center>
  <p>
-  2019年9月，一汽夏利宣布以合资的形式，用5亿元资产和一汽夏利的造车资质换取与南京博郡
-  <span href="https://www.secretchina.com/news/gb/tag/汽车" target="_blank">
-   汽车
+  <span href="https://www.secretchina.com/news/gb/tag/毛泽东" target="_blank">
+   毛泽东
   </span>
-  合资公司的19.9%股权，与南京博郡新能源汽车成立新能源合资公司。然而博郡至今也仍陷困局，完全无力扭转夏利败局。
+  与彭德怀在庐山辩论。彭先说，大跃进错误是主要的。毛说成绩是主要的。这是正常辩论的过程。接着就有意思了。毛马上翻历史旧账，历数彭在历史上的错误。更有意思的是，彭放下大跃进的话题，开始就历史旧账进行辩解。其实，彭这时最应该说的是，“历史的旧账和现在争论的问题有关系吗”？但他不能这么说。因为当时人们共同接受的框架就是：历史上一贯错误的人是不可能说出正确的话来的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,11 +178,25 @@
   </div>
  </center>
  <p>
-  一汽股份接回一汽夏利的同时，拟将其持有的一汽夏利6.98亿股股份（占本次交易前总股本的43.73%）无偿划转给铁物股份。上市公司将归到
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  控制资源的重要性。人们经常说，经常看电视的和经常上网的，对许多事情的看法往往就不一致。所以，90年代初进行的国情教育，也是非常成功的。90年代的思想教育有两个重点，国情与国学。前者是材料，后者是框架。用国学的框架，使用国情的材料，就能思考出需要的东西来了。受过国情教育的一代，往往会根据教育中提供的国情特征来思考问题。你说这个问题如何如何，他说，要考虑中国的国情嘛。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/洗脑" target="_blank">
+   洗脑
   </span>
-  铁路物资集团旗下，主业也将从汽车生产变更为轨道产业为主的物资供应链管理及轨道维护等。
+  ，这是人类历史最“精彩绝伦”的工作。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -227,7 +228,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -259,13 +260,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946733.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946733.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946733.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/21/946733.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/951917.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/951917.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/951917.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/12/951917.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/946733.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/951917.md' width='0px' height='0px'/>
