同步于: 11月13日1时52分

--- a/pages/nf4514/n12543905.md
+++ b/pages/nf4514/n12543905.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11·12】参院开通举报热线" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/09/ron-johnson-1200x800-600x400.jpg"/>
+<div><img alt="【大选更新11·12】USPS吹哨人受死亡威胁" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1284291433-600x400.jpg"/>
 <div class="caption">
- 美国参议院国土安全与政府事务委员会主席罗恩·约翰逊宣布，将开通邮寄选票举报热线。图为约翰逊资料照。(Win McNamee/Getty Images)
+ 图为2020年11月06日，宾夕法尼亚州的费城会议中心：选举工作人员在计数选票。 （Chris McGrath/Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
