同步于: 11月13日5时3分

--- a/pages/soh6/442078.md
+++ b/pages/soh6/442078.md
@@ -54,6 +54,23 @@
   下面是11月12日（周四）选情后续更新报导：
  </p>
  <h3>
+  宾州法院做出有利
+  <ok href="/term/1041">
+   川普
+  </ok>
+  判决：州务卿无权更改收票期限
+ </h3>
+ <p>
+  宾州法院周四（11月12日）裁定，宾州州务卿无权在选举日前2天更改邮寄选票的截止收件期。宾州法官莱维特（Mary Hannah Leavitt）下令，该州不得对那些需要提供身分证明、但在11月9日之前未能提供证明的选民选票进行计票。
+ </p>
+ <p>
+  莱维特在法庭命令中说：“法院的结论是，被告人州务卿凯西·博克瓦尔没有法律权限向被告县选举委员会发布2020年11月1日的指导意见。该指导意见旨在改变某些选民核实身分证明的最后期限。”此裁决与
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队的论点一致，即该州的法律没有延长身份识别截止日期的依据，博克瓦尔无权单方面更改及裁定收件期限，因此，这些延期选票将不得计算在内。
+ </p>
+ <h3>
   白宫发言人：
   <ok href="/term/1041">
    川普
@@ -186,8 +203,8 @@
  </h3>
  <p>
   威斯康星州联邦参议员、参院国土安全与政府事务委员会主席约翰逊（Ron Johnson）11月11日晚发推说：“我的委员会对美国邮局（USPS）和联邦雇员拥有管辖权。我想请任何人——任何了解跟邮寄或缺席选票有关违规行为的人——通过保密举报人热线联系我们：
-  <ok href="/cdn-cgi/l/email-protection#27504f4e54534b42454b48504255675548494d484f495448490954424946534209404851">
-   <span class="__cf_email__" data-cfemail="b9ced1d0cacdd5dcdbd5d6cedccbf9cbd6d7d3d6d1d7cad6d797cadcd7d8cddc97ded6cf">
+  <ok href="/cdn-cgi/l/email-protection#87f0efeef4f3ebe2e5ebe8f0e2f5c7f5e8e9ede8efe9f4e8e9a9f4e2e9e6f3e2a9e0e8f1">
+   <span class="__cf_email__" data-cfemail="45322d2c3631292027292a32203705372a2b2f2a2d2b362a2b6b36202b2431206b222a33">
     [email protected]
    </span>
   </ok>
