--- a/pages/p3/952440.md
+++ b/pages/p3/952440.md
@@ -1,4 +1,4 @@
-### 境界越高的人 越懂得尊重(图)
+### 大选监票员：45分钟内6人先后走向我……(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,18 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="尊重 平等 品行" src="https://img3.secretchina.com/pic/2020/7-10/p2728872a879225104-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="2020美国总统大选 选票舞弊 计票中心 监票员" src="https://img3.secretchina.com/pic/2020/11-13/p2817531a83801656-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   真正的
-   <strong>
-    尊重
-   </strong>
-   其实是一种
-   <strong>
-    平等
-   </strong>
-   ，不仰望不俯瞰，不卑不亢。（图片来源：Adobe stock)
+   11月5日，亚利桑那州其中一个美国总统大选计票中心。（图片来源：OLIVIER TOURON/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,64 +21,58 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  《永恒的五十分钟》（长春电视插播事件改编） ](http://141.164.39.94:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### [ 💥 李锐评习近平：没想到文化程度这么低（李锐是毛泽东秘书、习仲勋挚友、前中组部副部长）](http://141.164.39.94:10000/videos/res/Communist/lirui-xi.html)
-
-#### [ 💥 江泽民失态怒斥并威胁香港记者（ “图样图森破”，“谈笑风生” ）](http://141.164.39.94:10000/videos/res/realjzm/naive.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  真正的
-  <span href="https://www.secretchina.com/news/gb/tag/尊重" target="_blank">
-   尊重
-  </span>
-  其实是一种平等，不仰望不俯瞰，不卑不亢。境界越高的人，越明白尊重意味着平等、价值、人格和修养。而境界低的人，往往自私、目光短浅，自以为是地站在道德制高点去指责别人。
+  【看中国2020年11月13日讯】
+  <strong>
+   2020
+   <span href="https://www.secretchina.com/news/gb/tag/美国大选" target="_blank">
+    美国大选
+   </span>
+  </strong>
+  出现前所未有大规模
+  <strong>
+   选票舞弊
+  </strong>
+  现象。不少
+  <strong>
+   投票观察员（监票员）
+  </strong>
+  事后表示，他/她们在监票过程中，受到不同程度的阻碍和干扰，严重影响他们正常监票的工作。有一名当过多年监票员的男子表示，在他过去20多年监票员的经历中，从未遇过发生像今年这样可怕的事情。而底特律一名共和党监票员表示，他在监票过程中，在45分钟内，有6人先后向他走来，充满敌意。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  要尊重每一个人，也不要轻易看不起和低估任何人。尊重别人，其实是在尊重自己。懂得尊重别人，也是一个人
-  <span href="https://www.secretchina.com/news/gb/tag/品行" target="_blank">
-   品行
-  </span>
-  的体现。
- </p>
- <p>
   <strong>
-   【01】
+   <span href="https://www.secretchina.com/news/gb/tag/监票员" target="_blank">
+    监票员
+   </span>
+   ：45分钟内6个人先后走过来指责我……
   </strong>
  </p>
  <p>
-  《
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiWg9aMgsXqAhVsyIsBHeZ3DzsQmhMwH3oECA4QAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E7%25BD%25AA%25E4%25B8%258E%25E7%25BD%259A&amp;usg=AOvVaw1QYBYVByRIBcBftbyXBsyk">
-   罪与罚
+  密歇根州韦恩县（Wayne County）共和党监票员爱德华‧麦考尔（Edward McCall）在接受英文媒体采访时表示，今年他和其他观察员在监票过程中，受到一群持对抗态度的投票观察员“不断地”打扰，让他们无法专注观察选票计数和检查错误。
+ </p>
+ <p>
+  麦考尔在底特律TCF中心担任
+  <span href="https://zh.wikipedia.org/zh-hans/%E5%85%B1%E5%92%8C%E9%BB%A8_(%E7%BE%8E%E5%9C%8B)" target="_blank">
+   共和党
   </span>
-  》的作者，与
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjeqbuqgsXqAhUSqpQKHfHxD9EQmhMwDXoECAsQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E5%2588%2597%25E5%25A4%25AB%25C2%25B7%25E6%2589%2598%25E7%2588%25BE%25E6%2596%25AF%25E6%25B3%25B0&amp;usg=AOvVaw0tDLtDKKQbP1SK4vb-h9XK">
-   托尔斯泰
-  </span>
-  齐名的俄国大文豪，
-  <span href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwixiZ-YgsXqAhWQEqYKHZt3Bb4QmhMwE3oECAYQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E8%25B2%25BB%25E5%25A5%25A7%25E5%25A4%259A%25E7%2588%25BE%25C2%25B7%25E7%25B1%25B3%25E5%2593%2588%25E4%25BC%258A%25E6%25B4%259B%25E7%25B6%25AD%25E5%25A5%2587%25C2%25B7%25E9%2599%2580%25E6%2580%259D%25E5%25A6%25A5%25E8%2580%25B6%25E5%25A4%25AB%25E6%2596%25AF%25E5%259F%25BA&amp;usg=AOvVaw0NtBoWmCbHxRFiMPnHiwfI">
-   杜思妥也夫斯基
-  </span>
-  曾说：对人不尊敬的人，首先是对自己不尊重。
+  投票观察员，他被安排在11月2日到4日这几天的监票工作。
  </p>
  <p>
-  一个酒店管理专业的网友就曾分享他面试的一个故事：
+  他回忆说，有一次，在短短的45分钟时间里，就有6个人先后走向他，指责他站得太近，但其实麦考尔之前已得到了一名叫戴安娜（Diane）的主管的许可，可以站在那里。麦考尔回忆说，当他拒绝离开时，一个女人走开后去告诉另一个人，并用手指着他。
  </p>
  <p>
-  那次他去应聘酒店总经理的助理，经过几轮复试，最后留下他和一个姑娘，到见总经理的最后阶段。
+  他说：“我相信他们的全部目的就是为了分散我的注意力，让我不能去完成这个具有挑战性的工作，这样他们就能够（背着我们）处理一些选票。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -101,7 +87,7 @@
   </div>
  </center>
  <p>
-  那天，他们两个人一起被通知去总经理的办公室，路上遇到一位清洁阿姨在擦玻璃，她的清洁车放在旁边，转身时不小心撞到姑娘，把桶里的水泼到了两个人的身上。同行的姑娘鞋子和裙摆上都有水渍，网友裤子和皮鞋上也是。
+  据麦考尔回忆，在监票过程中，一群持对抗态度的投票观察员“不断地”与共和党观察员攀谈，“这种情况持续发生，令人难以置信。他们充满敌意，令人心烦意乱而分心，他们不断问问题，并从几英尺远的地方盯着我……这太令人震惊了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,7 +102,7 @@
   </div>
  </center>
  <p>
-  那位姑娘瞬间就火大说：“你这个保洁员有没有长眼睛，明知道后面有人来，你是不是故意的。我等会要面试，现在你看看我这样怎么去见人，耽误了我的面试你负责得起吗？真是倒霉。”
+  麦考尔还说，他们还遇到了被他称为是“观察观察员的人”。他表示，这些人“似乎就是为了挑战我们而存在的”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -131,7 +117,7 @@
   </div>
  </center>
  <p>
-  又转头对网友说：“你等我，我去收拾一下，等会一起去，要不然你一个人去也不好，对吧？”说完不等回答就往洗手间方向去了。
+  麦考尔回忆说，这个由10到12人组成的小团队，似乎是由一个戴着耳机的男人协调，他们不断地试图阻止共和党观察员提出质疑。当他和其他人试图查看选票时，那群人就会阻拦，反问共和党的监票员“这里有什么问题吗？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -146,7 +132,7 @@
   </div>
  </center>
  <p>
-  网友听到这姑娘这样说话，对她顿时没了好感。网友对清洁阿姨说：“阿姨，没关系，就是溅到一点水，你别太自责，下次注意就好。”
+  他说：“我相信，他们在有意识地破坏我们作为投票观察员所做的工作，这非常、非常令人不安。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -161,52 +147,7 @@
   </div>
  </center>
  <p>
-  然后帮保洁阿姨把地上的水拖干净，在等那位姑娘的时候，边和阿姨聊天，边帮保洁擦干净高处的玻璃。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  最后，他们两个人到总经理的办公室，总经理对网友伸出手说：恭喜你，你被录取了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  原来，所谓最后一场面试，就是刚才保洁阿姨的那段考验。那位总经理说：我们是服务行业，心里有别人，懂得尊重别人是最重要的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  所以，尊重是一个人有教养的重要体现。顾及别人感受，懂得换位思考，才会赢得别人的信任和支持。
+  11月9日，麦考尔和另一名监票员向法院提起诉讼，指控底特律TCF中心在计票过程中，存在“大量欺诈和不当行为”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -222,7 +163,7 @@
  </center>
  <p>
   <strong>
-   【02】
+   两监票员回忆：计票过程混乱
   </strong>
  </p>
  <center>
@@ -238,7 +179,7 @@
   </div>
  </center>
  <p>
-  一个人的境界，往往在细小的某一品质就能看出来。
+  11月3日晚上，另一名共和党监票员钱‧施密特（Qian Schmidt）刚好和麦考尔当班。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -253,7 +194,7 @@
   </div>
  </center>
  <p>
-  曾经看到过一个视频，在办公楼走廊上，因为冬天下雨送餐难免会稍微推迟点，那位女顾客看到外卖小哥送来的餐饭，直接发火当面将饭菜倒在地上，还恶言相对，抱怨外卖小哥送餐晚了，饭菜凉了。
+  她表示，计票过程相当混乱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -268,7 +209,7 @@
   </div>
  </center>
  <p>
-  这位女顾客对外卖小哥的愤怒，不仅仅是因为外卖送晚了，或许更重要的是她潜意识里对送餐行业的瞧不起。换个场景，如果是她的老板给她送个文件迟到了，这位女顾客敢把文件当着老板的面摔到地上吗？
+  她举了3个例子：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -283,7 +224,7 @@
   </div>
  </center>
  <p>
-  一个人修养的高低，往往不是表现在他对待上司、朋友、同事的态度上，而是看他是否尊重“比他地位低”的人。
+  1、投票箱本应该安排人来看管，但事实她看到的是“无人看管的投票箱”；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -298,11 +239,7 @@
   </div>
  </center>
  <p>
-  无论人和人之间，或是行业与行业之间，都没有高低贵贱之分，都是
-  <span href="https://www.secretchina.com/news/gb/tag/平等" target="_blank">
-   平等
-  </span>
-  的。尊重别人，就是尊重自己。
+  2、有三张“来路不明”的选票，这3张选票在系统里并没有找到；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -317,9 +254,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   【03】
-  </strong>
+  3、一次重复投票。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -334,7 +269,82 @@
   </div>
  </center>
  <p>
-  一个人境界的高低和他的学历、财富、社会阶层等无关，和他的眼界、修养教养、格局有关。
+  而麦考尔即回忆到，他在11月2日当班期间，发现了24起投票问题。他列举：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  1、至少有15张选票外信封上手写的选票号码与电子投票簿不符；
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2、有一张选票的信封上标有错误的日期；
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  3、还有一些选票表格填写不正确，但检票员没有审核就计入了统计。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  4、被处理过的选票被装在小袋子里，放在一个装有需要扫描选票的金属盒子上。他说，工作人员可能会忽略投票箱或重复计入这些选票。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  除此之外，麦考尔还说，不同计票台之间的工作量也有很大差异。选举当晚，他所在计票桌旁的工作人员，只统计了20张选票，之后基本上就（无事可干）只是坐在那里，而其它计票桌则收到了多达两千张选票。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -353,7 +363,7 @@
   </ins>
  </center>
  <p>
-  境界越高的人，往往具有高情商，越懂得尊重别人。同时，一个懂得尊重别人的人，往往是一个“优秀”的人。
+  除了监票工作受到干扰外，作为华裔的钱‧施密特在声明中还说，自己在那里还经历了来自非裔美国人的种族歧视，她被问到“既然你不是美国人，你有什么权利来这里？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -368,7 +378,7 @@
   </div>
  </center>
  <p>
-  他们目光长远，有阅历，格局大；成熟且有充实的内在，不需要去通过贬低别人和卖弄自己来彰显高贵；而且更懂得“感同身受”和换位思考，懂得尊重别人的不易和努力。
+  但是，对于这两名共和党监票员的指控，底特律市长办公室的律师大卫‧芬克（David Fink）却称，这两起诉讼都是“毫无根据的”。密歇根州务院发言人杰克‧罗洛（Jake Rollow）也坚称“在密歇根州进行的选举是公平、安全、透明的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -383,7 +393,7 @@
   </div>
  </center>
  <p>
-  尊重别人，可以分为三种境界：
+  但麦考尔指出，民主党人无视具体情况就直接反驳指控的做法，像是“一份可以应对所有质疑的回应声明，但它却无法回应实际情况”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -398,7 +408,7 @@
   </div>
  </center>
  <p>
-  第一种境界：尊重亲人
+  他说，已经有几十名共和党投票观察员，就自己在计票站的遭遇与他进行了接触。他说：“我们有责任让密歇根州的选票处理工作变得更加透明和简化，特别是在韦恩县。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -413,7 +423,9 @@
   </div>
  </center>
  <p>
-  第二种境界：尊重路人
+  <strong>
+   宾州共和党监票员被拒绝入站监票
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -428,7 +440,7 @@
   </div>
  </center>
  <p>
-  第三种境界：尊重敌人
+  11月3日，在宾夕法尼亚这个关键摇摆州，一名经认证在全市范围内有监督资格的共和党监票员加里‧费尔德曼（Gary Feldman）被拒绝进入该市投票站。票站工作人员甚至对他叫嚣：“来，报警吧！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -443,7 +455,7 @@
   </div>
  </center>
  <p>
-  当我们可以做到尊重敌人的时候，我们其实已经没有了敌人，这才是真正的无敌。
+  11月3日，政治杂志《人事》（Human Events）主编张伯伦（Will Chamberlain）在推特发布一段视频。视频中可见，两名投票站的工作人员告诉一名男子，他的投票观察员的证书不足以让他进入费城的投票站。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -458,7 +470,7 @@
   </div>
  </center>
  <p>
-  尊重领导是一种天职，尊重同事是一种本分，尊重下属是一种美德，尊重客户是一种常识，尊重对手是一种大度，尊重所有人是一种教养，可以说尊重的魅力无限。
+  一名身穿浅棕色夹克的男子对票站工作人员说：“我有全市投票观察员的证书。”并给他展示证书，但还是遭到了投票站工作人员的不友善对待，一名男性工作人员甚至呛他：“报警吧，来，”“如果你是合法的，就去报警吧。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -473,7 +485,7 @@
   </div>
  </center>
  <p>
-  任何人都不可能尽善尽美，我们没有理由以高山仰止的目光去审视别人，也没有资格用不屑一顾的神情去伤害别人的自尊，假如自己某些方面不如别人，我们也不必以自卑或嫉妒去代替应有的自尊。只有学会尊重别人，才能赢得别人的尊重。其实尊重别人就是尊重自己。
+  事后，张伯伦确认了这名夹克男就是加里‧费尔德曼（Gary Feldman），他的证书上写着“授权这个人在费城的任何一个区进行投票观察。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -488,7 +500,11 @@
   </div>
  </center>
  <p>
-  心宽一尺路宽一丈，敞开心胸善待所有人。无论是你喜欢的还是讨厌的，无论是你的朋友还是你的敌人，都要尊重他们，这是一种勇气更是一种智慧！
+  报导称，罗曼是一名资深共和党人，他在周二上午分享了张伯伦的帖子，声称类似事件正在费城各地发生。（详情阅读：
+  <span href="https://www.secretchina.com/news/gb/2020/11/05/951575.html">
+   投票监察员竟被拒入站 那里面在干什么？
+  </span>
+  ）
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -502,7 +518,22 @@
    </center>
   </div>
  </center>
- <p style=" margin-bottom: 8px; ">
+ <p>
+  而一名在新泽西、宾州都当过多年监票员的男子表示，在他过去20多年监票员的经历中，从未遇过像今年这样可怕的事情。今年他看到或亲身经历了监票员受到种种的干扰、阻碍甚至恐吓。他表示：“这实在是太可怕了！”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -519,6 +550,11 @@
   </span>
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
+   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+   </span>
+  </center>
+  <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
     </div>
@@ -532,7 +568,7 @@
   </center>
   <center>
    <div>
-    <div id="txt-mid2-t22-2017" style="display: block;  max-height: 351px;  overflow: hidden;">
+    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
      <div id="SC-21xx">
      </div>
      <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
@@ -547,13 +583,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/939185.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/939185.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/939185.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/11/939185.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952440.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952440.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952440.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/13/952440.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/939185.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/952440.md' width='0px' height='0px'/>
