--- a/pages/nf4514/n12546734.md
+++ b/pages/nf4514/n12546734.md
@@ -62,10 +62,34 @@
  情况的实时更新：
 </h4>
 <h3>
- 福克斯新闻：民主党内部人士给《纽时》爆料 曝光选举作弊
+ 朱利安尼：太多的地方都有太多的舞弊不可能是巧合
 </h3>
 <p>
+ 朱利安尼周五早上发推文说：“太多的地方都有太多的舞弊不可能是巧合。”
 </p>
+<p>
+ <center>
+ </center>
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  There was too much fraud , in too many places to be a coincidence.
+  <ok href="https://t.co/tkx3Ws36q7">
+   https://t.co/tkx3Ws36q7
+  </ok>
+ </p>
+ <p>
+  — Rudy W. Giuliani (@RudyGiuliani)
+  <ok href="https://twitter.com/RudyGiuliani/status/1327161309268467713?ref_src=twsrc%5Etfw">
+   November 13, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<h3>
+ 福克斯新闻：民主党内部人士给《纽时》爆料 曝光选举作弊
+</h3>
 <blockquote class="twitter-tweet">
  <p dir="ltr" lang="zh">
   民主党内部人士给《纽约时报》爆料，其偷改邮寄选票和其他选举作弊行为！
@@ -137,8 +161,6 @@
  </h3>
  <p>
   川普总统周五一早发推，让人们去看福克斯新闻主持人肖恩·汉尼提（Sean Hannity）关于此次大选中出现故障的Dominion Voting System投票系统。称该系统“不准确、不安全、糟糕透顶。在诸州导致我们成千上万张被偷走，送给了拜登。”
- </p>
- <p>
  </p>
  <blockquote class="twitter-tweet">
   <p dir="ltr" lang="en">
