--- a/pages/soh6/442471.md
+++ b/pages/soh6/442471.md
@@ -35,6 +35,35 @@
   下面是11月13日（周五）选情后续更新报导：
  </p>
  <h3>
+  白宫经济顾问：白宫仍在川普连任的前提下运转
+ </h3>
+ <p>
+  白宫经济顾问纳瓦罗（Peter Navarro）周五表示，川普政府认为，川普总统将连任，因此仍正在这个前提下运作。他说：“我们认为川普赢得了大选。我认为，目前对乔·拜登可能做什么的任何猜测都是不切实际的。”
+ </p>
+ <p>
+  纳瓦罗还谈到，选举日当天川普总统一路领先，但后来在关键战场州，拜登却以某种方式拿到足够选票并赶上总统，他认为，“从统计学的角度来看待发生的事，总统显然赢得了选举。”
+ </p>
+ <p>
+  与他一样，川普政府第三号人物、国务卿蓬佩奥也在两天前自信地表示，美国将顺利地过渡到川普政府的第二任期。
+ </p>
+ <h3>
+  朱利安尼：此次大选太多舞弊，不可能是巧合
+ </h3>
+ <p>
+  周五早上，川普律师朱利安尼发推文说：“（在这次大选中），太多的地方都有太多的舞弊，这不可能是巧合。”
+ </p>
+ <p>
+  川普总统回应说，是民主党操纵了这次选举。川普说：“多年来，民主党一直在宣扬我们的选举是多么不安全和被人为操纵。现在他们却说：川普政府工作出色，让2020年（大选）成为有史以来最安全的选举。本来是这样，但是民主党（做手脚）操纵了这次选举！”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive" style="padding-bottom: 100%;">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h3>
   川普：拜登没赢，他其实输得很惨！
  </h3>
  <p>
