--- a/pages/soh6/442471.md
+++ b/pages/soh6/442471.md
@@ -1,4 +1,4 @@
-### 【选情更新11/13】专家揭Dominion投票软件重大缺陷 川普：拜登其实输很惨
+### 【选情更新11/13】联邦选委会主席说本次选举或违宪 纳瓦罗相信川普会赢
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
