--- a/pages/prog202/a102986570.md
+++ b/pages/prog202/a102986570.md
@@ -1,4 +1,4 @@
-### 【环球直击】10月18日完整版（2）
+### 【全球新闻】11月13日完整版
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,34 +7,42 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月19日讯】【环球直击】10月18日完整版
+  【新唐人北京时间2020年11月14日讯】【全球新闻】11月13日完整版
  </p>
  <p>
   <strong>
    提要
   </strong>
   <br/>
-  <ok href="https://www.ntdtv.com/gb/拜登.htm">
-   拜登
-  </ok>
-  硬盘门 美参议员促FBI回应
-  <br/>
-  纽约长岛千辆车队挺
+  “极速行动”
   <ok href="https://www.ntdtv.com/gb/川普.htm">
    川普
   </ok>
-  百英里大游行
-  <br/>
-  威胁30万在港加人安全
-  <ok href="https://www.ntdtv.com/gb/中共大使.htm">
-   中共大使
+  :
+  <ok href="https://www.ntdtv.com/gb/疫苗.htm">
+   疫苗
   </ok>
-  激怒加拿大人
+  明年4月全民发放
   <br/>
-  <ok href="https://www.ntdtv.com/gb/孔子学院.htm">
-   孔子学院
+  重量级议员再挺
+  <ok href="https://www.ntdtv.com/gb/川普.htm">
+   川普
   </ok>
-  不准教真相 法民间吁关闭声高涨
+  <ok href="https://www.ntdtv.com/gb/纳瓦罗.htm">
+   纳瓦罗
+  </ok>
+  ：相信我们赢了
+  <br/>
+  隐瞒参与
+  <ok href="https://www.ntdtv.com/gb/千人计划.htm">
+   千人计划
+  </ok>
+  华裔免疫学专家认罪
+  <br/>
+  以车代步逛集市 德国的免下车
+  <ok href="https://www.ntdtv.com/gb/圣诞市场.htm">
+   圣诞市场
+  </ok>
  </p>
  <div class="single_ad">
  </div>
@@ -42,13 +50,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102966114.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102966114.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102966114.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/18/a102966114.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102986570.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102986570.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102986570.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/14/a102986570.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102966114.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102986570.md' width='0px' height='0px'/>
