--- a/pages/soh6/442471.md
+++ b/pages/soh6/442471.md
@@ -163,7 +163,7 @@
   伍德大律师：中共对美国大选进行实质性干扰
  </h3>
  <p>
-  川普律师团队著名律师伍德（Lucian Wood）周四发推文直指中共了干扰美国大选。他认为，中共先是利用中共病毒攻击美国，再通过在Dominion投票系统中做手脚实施选举欺诈。
+  川普律师团队著名律师伍德（Lucian Wood）周四发推文直指中共干扰了美国大选。他认为，中共先是利用中共病毒攻击美国，再通过在Dominion投票系统中做手脚实施选举欺诈。
  </p>
  <p>
   他还在推文中列举了中共渗透美国的时间表：
