--- a/pages/nf4514/n12549021.md
+++ b/pages/nf4514/n12549021.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11·14】川普加州获票数创纪录" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1JO1R0-600x400.jpg"/>
+<div><img alt="【大选更新11·14】川普加州获票数创纪录" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1227815366-600x400.jpg"/>
 <div class="caption">
- 美国总统川普（Donald Trump）在被认为是在深蓝的加州，获得了超过550万张选票，创下共和党总统候选人在加州史上最高得票的纪录。 (MANDEL NGAN/AFP)
+ 图为德克萨斯州共和党众议员路易·戈默特（Louie Gohmert）。（摄于2020年7月28日）（Matt McClain-Pool/Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
