--- a/pages/nsc412/n12549021.md
+++ b/pages/nsc412/n12549021.md
@@ -49,6 +49,27 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 内华达州州长染疫
+</h3>
+<p>
+ 内华达州州长史蒂夫·西索拉克（Steve Sisolak）周五（11月13日）宣布，他的中共病毒（武汉肺炎）测试呈阳性。
+</p>
+<p>
+ “对我来说，重要的是，应尽快将我的COVID-19阳性检测结果通知内华达人。我目前没有任何COVID-19症状，我已经回到我的住所开始检疫隔离。”这位民主党人在一份声明中说。
+</p>
+<p>
+ 接触跟踪或最近与西索拉克接触过人员的联系工作正在进行中。
+</p>
+<p>
+ COVID-19是由中共病毒引起的疾病。
+</p>
+<p>
+ 据悉，西索拉克没有出现任何症状。不过，本周周初他感觉疲劳。
+</p>
+<p>
+ 西索拉克是继密苏里州州长迈克·帕森（Mike Parson）、弗吉尼亚州州长拉尔夫·诺瑟姆（Ralph Northam）、俄克拉荷马州州长凯文·斯蒂特（Kevin Stitt）和俄亥俄州州长迈克·德威恩（Mike DeWine）之后第五位染疫的州长。
+</p>
+<h3>
  宪法专家：川普将赢得宾州迟交选票相关诉讼
 </h3>
 <p>
@@ -62,6 +83,11 @@
 </p>
 <p>
  “从某种理论上讲，这可能是正确的决定，但是《宪法》不允许该州除了立法机关的任何人做出选举相关决定。”德肖维茨说。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/11/14/n12549189.htm" rel="noopener noreferrer" target="_blank">
+  阅读全文
+ </ok>
 </p>
 <h3>
  共和党人在加州拿下第二个民主党众议院席位
