--- a/pages/p5/952584.md
+++ b/pages/p5/952584.md
@@ -1,4 +1,4 @@
-### 为什么中国的理财收益率8%以上就很危险？(图)
+### 大选忙里抽闲 川普首次正式对中国金融制裁(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="理财 收益率 本金" src="https://img3.secretchina.com/pic/2020/6-27/p2719521a21883032-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="美国大选 川普 金融 制裁" src="https://img3.secretchina.com/pic/2020/11-8/p2813351a599858510-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   超过8%就很危险，10%以上就要准备损失全部本金。（图片来源：Adobe Stock）
+   川普政府禁止美国资金投资31家涉嫌由中国军队控制或持有的企业。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,98 +21,61 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月23日讯】在今天这个全民
+  【看中国2020年11月14日讯】（看中国记者文龙综合报导）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/理财" target="_blank">
-    理财
+   美国大选
+  </strong>
+  处于胶着状态，美国总统
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+    川普
    </span>
+   (特朗普)
   </strong>
-  的时代，
+  针对存在的舞弊现象提起诉讼。不过，川普忙里抽闲首次正式对中国企业发动
   <strong>
-   收益率
+   金融制裁
   </strong>
-  到底多少才合适？最近，中国银保监会和央行的负责人说了一段话，信息量非常大：承诺保证
-  <strong>
-   本金
-  </strong>
-  的金融产品收益率超过6%就要打问号，超过8%就很危险，10%以上就要准备损失全部本金。
+  ，禁止美国资金投资31家涉嫌由中国军队控制或持有的企业。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  ・为什么说超过8%就很危险？
- </p>
- <p>
-  ・除了
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%94%B6%E7%9B%8A%E7%8E%87" target="_blank">
-   收益率
+  当地时间11月12日，川普签署了行政命令，不少大型中资企业包括中国移动、中国电信和
+  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
+   华为
   </span>
-  ，这个表态还暗含了哪些其它信息？
+  等公司，都在名单上。要求已持有股份的投资者要在2021年11月13日前放弃相关股份，这条行政命令将在2021年1月11日生效。
  </p>
  <p>
-  ・投资者到底能赚到哪些钱？
- </p>
- <p>
-  我们就围绕这个
-  <span href="https://www.secretchina.com/news/gb/tag/收益率" target="_blank">
-   收益率
-  </span>
-  的话题，从不同角度和大家进行分享。首先，刚才说了超过三个数字，6%，8%，10%，就有危险，那为什么不是20%，30%呢？
- </p>
- <p>
-  因为大家知道，我们的收益率，其实就是其他人借钱的成本，尤其是这种承诺
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%9C%AC%E9%87%91" target="_blank">
-   本金
-  </span>
-  的收益率，本质上就是我们把钱借给项目方，项目方拿着钱，可能去盖了楼、买了设备、搞了生产，其实本质上他们就是从咱们这儿借钱去做生意了，等以后生意赚了钱，从利润当中拿一部分，把借咱们的本金和利息给还掉。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  那么，咱们如果想要到期顺利拿到
-  <span href="https://www.secretchina.com/news/gb/tag/本金" target="_blank">
-   本金
-  </span>
-  和利息，就要求借钱的人做的生意，必须有尽可能高的利润，他的利润越多，咱们最后本金和利息兑现的可能性越大。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  那么在
+  白宫声明指出，
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  做生意，到底能获得多少回报呢？
+  正蚕食美国资本，在美国市场吸纳资金发展军队现代化，导致中国的情报、军事和国家安全机构，有能力威胁美国国家安全。中国发展大杀伤力和先进武器，以及发动恶意网络行动，攻击美国和国民。
+ </p>
+ <p>
+  川普表示，中国企业利用美国市场公开交易出售证券，又游说美国投资机构发行证券集资，从而获取巨大资本发展中国军备。
+ </p>
+ <p>
+  这是川普政府首次正式对中国发动
+  <span href="https://www.secretchina.com/news/gb/tag/金融" target="_blank">
+   金融
+  </span>
+  制裁，专家分析，类似的行政命令后续还会有，以及包括绕过国会调整关税及强迫中国企业从美国退市。
+ </p>
+ <p>
+  英国《金融时报》引述共和党参议员鲁比奥（Marco Rubio）报道，他说：“中共掠夺美国资本市场，明显并且持续威胁美国经济和国家安全”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,7 +90,7 @@
   </div>
  </center>
  <p>
-  我们就以上市公司为例，这几千家公司，是中国数千万企业中的前千分之一的佼佼者，应该说很有代表性了。上市公司平均的利润率大概是5%，这什么概念呢，就是说，如果你完成一次交易，做成一次生意，100块钱的流水，最后能装兜里5块钱。
+  禁止美国人投资31家企业涉及航天、造船、建筑及电讯科技等行业，尤其被列入名单内的中国三大电信运营商：中国电信、中国联通及中国移动。旗下有不少公司在中港两地、甚至海外上市。据统计，在香港上市公司至少有29家，这些上市公司的股价在11月13日普遍下跌。中国电信跌7.78%，中国联通及中国移动各收跌6.57%及5.03%，成为表现最差蓝筹。中国交通建设及中国铁建各跌3.35%及4.12%。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,7 +105,7 @@
   </div>
  </center>
  <p>
-  但是你知道，薄利多销，卖得虽然便宜，但是可以卖得多卖得快，一年多做几次生意。比如你有辆价值20万的车，出去跑拉货或者接人，一年跑了10万的收入，那么这个时候，你的周转率就是0.5（总收入/总资产）；如果你多拉快跑提高效率，通过勤奋和努力，一年跑了20万收入，那么你的周转率就从0.5次，提高到了1次。
+  中国电信、中国联通及中国移动就此公布公告，表示正审视该行政命令的潜在后果。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,7 +120,7 @@
   </div>
  </center>
  <p>
-  如果你继续拼博，打满996，还是那辆20万的车，但是一年跑了40万收入，这个时候你的周转率就提高到了2，对大多数生意来讲，这个周转率是唯一一个只要依靠个人努力和勤奋，就可以提高的指标。
+  另外，美国投资基金的定义是否包括在美国境内管理的离岸注册基金，以及指数基金如何执行亦备受关注，因中国电信、中国联通及中国移动为权重较高的指数成分股，指数基金要避开这些股票的话，会影响追踪相关指数的准确性。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,7 +135,7 @@
   </div>
  </center>
  <p>
-  那么上市公司们的效率怎么样呢？他们作为一个整体，周转率是0.5次。
+  摩根大通表示，在美国未列出更多执行禁令的细节前，短期将对相关股份的投资情绪产生负面作用。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,56 +154,41 @@
   </ins>
  </center>
  <p>
-  最后，从生意的角度，还有最后一个指标，就是杠杆。大家买房子都有个经验，就是3成首付，你出的本金占1/3左右，房屋的总价值是你本金的3倍，所以你个人负担的其实是个3倍杠杆。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  上市公司们和大家一样，他们做生意借钱，大概也是这个水平，整体平均承担了3倍杠杆。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  那么到了这里，在中国做生意到底能获得多少回报，我们就可以给大家一个小结论了，上市公司们平均的利润率是5%，周转率是0.5次，3倍杠杆，三者相乘，上市公司们做生意，一年能获得的回报率就是7.5%。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当我们把做生意这件复杂的事，把它的颗粒度拆细到这种程度，你马上就会明白，为什么你做
-  <span href="https://zh.wikipedia.org/zh-cn/%E7%90%86%E8%B4%A2" target="_blank">
-   理财
+  大华继显执行董事梁伟源认为，市场要有心理准备，川普将有很多招数针对中国企业，届时市场将较波动。因美国过去多次以网络安全为由
+  <span href="https://www.secretchina.com/news/gb/tag/制裁" target="_blank">
+   制裁
   </span>
-  ，8%以上就很危险了，答案很简单，因为中国这批最聪明、最有实力的上市公司，他们一年的回报率就是7.5%，如果借钱的成本就高达8%，那么上市公司们自己也不用做生意了，因为负担不起，如果真的可以无风险的赚8%，甚至10%，那么天下就真的没有难做的生意了。因为所有的公司，估计会立马转型成为一家躺着赚钱的理财公司。
+  中国的科技企业，相关企业较高危。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据《自由亚洲》电台11月13日报道，香港经济学者罗家聪介绍中国军方在香港和美国市场吸纳美资的机制：美国上市直接在美国集资，香港上市一样可以集美资。美国基金买到香港，例如，亚洲基金可能会买港股，如果这些基金买中受制裁的31只股份，香港资金就被吸纳了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  罗家聪表示，这次的行政命令，最大影响是开了先例。这次举动算是示威，做得一次可以做第二次，这次算是首次正式金融制裁，后续可能会有更多禁令，禁止融资会令中国企业很麻烦。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -272,7 +220,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -304,13 +252,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946948.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946948.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946948.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/23/946948.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952584.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952584.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952584.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/14/952584.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/946948.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/952584.md' width='0px' height='0px'/>
