--- a/pages/nf4514/n12549021.md
+++ b/pages/nf4514/n12549021.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11·14】川普总统现身集会" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87G9-600x400.jpg"/>
+<div><img alt="【大选更新11·14】川粉：有史以来最好总统" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87G9-600x400.jpg"/>
 <div class="caption">
  11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
 </div></div><hr/>
