--- a/pages/nsc412/n12549021.md
+++ b/pages/nsc412/n12549021.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11·14】川普总统现身集会" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87G9-600x400.jpg"/>
+<div><img alt="【大选更新11·14】川粉：有史以来最好总统" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87G9-600x400.jpg"/>
 <div class="caption">
  11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
 </div></div><hr/>
@@ -57,6 +57,8 @@
 <p>
  周六（11月14日）中午12:00开始，美国50州民众集会挺川普，抗议拜登大规模舞弊，呼吁停止窃取大选（Stop the Steal）。华盛顿的集会在自由广场登场，在最高法院结束。
 </p>
+<div class="video_fit_container">
+</div>
 <h3>
  “拜登当不上总统 而是进牢房”
 </h3>
