--- a/pages/nf4514/n12549021.md
+++ b/pages/nf4514/n12549021.md
@@ -57,6 +57,8 @@
 <p>
  周六（11月14日）中午12:00开始，美国50州民众集会挺川普，抗议拜登大规模舞弊，呼吁停止窃取大选（Stop the Steal）。华盛顿的集会在自由广场登场，在最高法院结束。
 </p>
+<div class="video_fit_container">
+</div>
 <h3>
  “拜登当不上总统 而是进牢房”
 </h3>
