--- a/pages/nsc412/n12549021.md
+++ b/pages/nsc412/n12549021.md
@@ -1,4 +1,4 @@
-### 【大选更新11·14】川普总统现身集会
+### 【大选更新11·14】川粉：有史以来最好总统
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -49,16 +49,107 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 川粉：有史以来最好的总统
+</h3>
+<p>
+ 川普总统来自全国各地的支持者周六在华盛顿特区会合，举行“窃取大选”（Stop the Steal）集会，以声援川普团队针对选举欺诈所展开的法律战。
+</p>
+<figure class="wp-caption alignnone" id="attachment_12549600" style="width: 621px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87GY.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12549600" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87GY-621x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 现场的记者说，今天的聚会可能是1963年马丁·路德·金“我有一个梦想”示威以来规模最大的一次。
+</p>
+<figure class="wp-caption alignnone" id="attachment_12549622" style="width: 615px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87VX.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12549622" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87VX-615x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  11月14日，川普总统的支持者在华盛顿参加“百万MAGA 游行”活动。（Andrew CABALLERO-REYNOLDS / AFP）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 正如川普昨天所说的那样，他来到现场，向他的支持者们问好。
+</p>
+<figure class="wp-caption alignnone" id="attachment_12549594" style="width: 601px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87H4.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12549594" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87H4-601x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 当总统和他的车队驶过人群时，其中一些人挥舞着川普旗帜，举着标语——“停止欺诈”和“有史以来最好的总统”。人群高喊“再来四年！”川普向他们竖起大拇指。
+</p>
+<figure class="wp-caption alignnone" id="attachment_12549599" style="width: 601px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87GF.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12549599" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87GF-601x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 川普周五在推特上暗示他可能会参加集会。
+</p>
+<p>
+ “看到人们给予我的巨大支持，尤其是全国各地雨后春笋般的有组织的集会，包括周六在华盛顿举行的大型集会。”
+</p>
+<p>
+ “我可能会去看一下，问声好。”川普在周五的推特上说。
+</p>
+<figure class="wp-caption alignnone" id="attachment_12549596" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87U7.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12549596" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87U7-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 川普一直在说“选举被操纵”，也一直被推特贴标签和警告，称川普的欺诈指控有争议。
+</p>
+<figure class="wp-caption alignnone" id="attachment_12549593" style="width: 602px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/000_8V876X.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12549593" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V876X-602x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 面对越来越多的证据和证人的指控，美国主流媒体一直在说“没有证据”证明2020美国大选被操纵和窃取，并坚称民主党候选人乔·拜登为“当选总统”。
+</p>
+<div class="video_fit_container">
+</div>
+<p>
+ <ok href="https://www.theepochtimes.com/live" rel="noopener noreferrer" target="_blank">
+  英文大纪元直播请点击这里。
+ </ok>
+</p>
+<h3>
  川普总统现身集会 招手致意
 </h3>
 <p>
  上午10点左右，川普总统的车队穿过华盛顿支持者集会的自由广场， 当他开车驶过时，人们高喊着“美国，美国！”川普向人群招手致意。
 </p>
+<figure class="wp-caption alignnone" id="attachment_12549544" style="width: 691px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/000_8V86XW.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12549544" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V86XW-691x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
+ </figcaption><br/>
+</figure><br/>
 <p>
  周六（11月14日）中午12:00开始，美国50州民众集会挺川普，抗议拜登大规模舞弊，呼吁停止窃取大选（Stop the Steal）。华盛顿的集会在自由广场登场，在最高法院结束。
 </p>
-<div class="video_fit_container">
-</div>
 <h3>
  “拜登当不上总统 而是进牢房”
 </h3>
