--- a/pages/p1/952585.md
+++ b/pages/p1/952585.md
@@ -1,4 +1,4 @@
-### 14亿人里12亿没消费能力：谁掏空了百姓的钱袋？(图)
+### 当局终于对农民下手了 网友：想钱想疯了(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,61 +6,105 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p>
-  【看
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  2020年9月23日讯】中国是一个人口大国，14亿左右的人口已撑起了数个上千亿级别的消费市场。特别是随着中国经济过去几十年的腾飞，在人们生活水平不断提高的同时，也越发重视自己与家人生活的品质，随之消费也出现了升级。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
+ <p style="text-align:center">
+  <img alt="近日传出河南新乡石婆固镇要在全镇范围内开始推行农村宅基地征费政策（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/11-15/p2818231a608861254-ss.jpg" style="width:600px"/>
+  <br>
+   近日传出河南新乡石婆固镇要在全镇范围内开始推行农村宅基地征费政策（图片来源：微博）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  有相关的报道表明，在2018年之时，在购买奢侈品方面中国人就花了7700亿，占据了全球总消费额的30%左右，中国可谓是全球的第一大奢侈品消费国。而在这其中，80后的买家占据了40%之多，平均每人每年在购买奢侈品方面的花费大概是4万元；90后的买家占据了30%左右，平均每人每年的花费大概为2.5万元。
+  【看中国2020年11月15日讯】
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/宅基地" target="_blank">
+    宅基地
+   </span>
+  </strong>
+  一直以来都是
+  <strong>
+   农民
+  </strong>
+  们拥有、无偿使用且可以世代相传的住宅地。但近日却传出河南新乡石婆固镇要在全镇范围内开始推行农村宅基地
+  <strong>
+   征费
+  </strong>
+  政策。有分析认为，可能跟地方政府财政吃紧有关，农民或已无法避免的成了收割对象。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这样来看的话，中国人好像是“不差钱”的，怪不得
-  <span href="https://www.secretchina.com/news/gb/tag/马云" target="_blank">
-   马云
+  综合陆媒报导，近期
+  <span href="https://zh.wikipedia.org/zh-hans/%E6%96%B0%E4%B9%A1%E5%B8%82" target="_blank">
+   河南新乡
   </span>
-  会有这般看法：中国的消费市场颇为庞大，有着13、14亿的消费市场，且拥有无限的潜力。
+  石婆固镇提出要在全镇推行农村宅基地收费政策。要对“一户一宅”超出标准占用的部分进行收费。而这个所谓的“一宅一户”的认定标准则包括：农户只有1个子女的，认定为一户。有2个以上子女，但只有一个儿子的，认定为一户。有2个以上儿子的，父母跟随其中一个居住的认定为一户。且村民拥有宅基地面积总和不能超过167平米，超出部分将实行阶梯式计费，如：超出面积1至50平米，将按每平米每年2.5元计费。超出51至100平米，则每平米每年5元计费，依次类推。如住一栋300平米的房子，每年需交705元人民币。
  </p>
  <p>
-  在时代飞速发展的今天，我们日常生活中的很多方面，比如日常购物、视频影音、办公学习等，几乎都被马云创办的“阿里系”所囊括的诸多平台“覆盖”。
+  消息一出，引发网友怒轰：“开始明抢了？”
  </p>
  <p>
-  在如此之多的平台中，总有一个是你曾经用到过的，并且，马云也涉足了许多新的领域，所“撬动”的消费群体也有所增多，从此来看，马云的这种看法并不是没有道理。
- </p>
- <p>
-  不过，福耀玻璃的创始人曹德旺却不认同马云的这种看法。在曹德旺看来，在中国这13、14亿的人口里，恐怕仅有2亿人左右有
-  <span href="https://www.secretchina.com/news/gb/tag/消费能力" target="_blank">
-   消费能力
+  据自由亚洲电台报导，家在河南洛阳农村的居民表示，宅基地是祖先留下的土地，政府这种收费对
+  <span href="https://www.secretchina.com/news/gb/tag/农民" target="_blank">
+   农民
   </span>
-  ，至于其他的只是人口而已。
+  肯定是不利的，肯定是对农民不公平的。现在商品房都不限制，为什么赖以生存的宅基地要收费，这种做法非常的不合理。而且宅基地收费以前根本就没有听说过的，并且很多农民有没有证都不确定。
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/曹德旺" target="_blank">
-   曹德旺
+  报导指出，早在2015年，中共就在全国范围内所谓宅基地改革试点，悄然开始进行土地确权登记。三年后，当局宣布，农村土地确权登记颁证工作基本完成，并指已有部分省份的农民领到《农村土地承包经营权证》和农村宅基地，及房屋《不动产权证书》，还称“不符合《土地管理法》规定的宅基地要收取有偿使用费。”
+ </p>
+ <p>
+  有河南许昌法律界人士许志刚表示，当地农村目前在清查住宅。“这明显是要先清查你的家底，然后再收费。国家肯定现在缺钱了，就从各个方面抢钱。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  另有郑州学者认为，如今河南省率先向部分宅基地使用者收费，下一步就将是全国，并表示，这是早晚要发生的事。因为农民都有宅基地，所以不会购买商品房，但这样对中共以房地产当主体的经济体系，会是一个致命的打击，并且现在很多的空房没人买。所以农村的宅基地收费是迟早的事。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据悉，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  与马云虽然有着不同的立场，却也有着各自的道理，对马云来说，人们哪怕是从淘宝上购买上几个几块钱就能包邮的东西，也是能够称得上是“消费”。
+  政府向农村宅基地使用者收费，一旦在全国推广，将涉及超过5亿农民。而政府这项无需成本的收费方案，将获益庞大。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -75,7 +119,7 @@
   </div>
  </center>
  <p>
-  但是，曹德旺是做汽车玻璃起家的，对他来说，可能像汽车这类虽不是必需品，却能够提高人们生活质量的这种才算是“消费”。
+  对此，网友也纷纷怒了：“想钱想疯了吗，农村很多人建平房，还要放杂物养牲畜，堆粮食，这些不要地方吗？创收也不是这么搞的吧！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,7 +134,7 @@
   </div>
  </center>
  <p>
-  如果根据马云的定义，大部分的国人是有能力消费的，但是要是依照着曹德旺的那种标准看来呢？
+  “我家的宅基地你凭什么回收？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,7 +149,7 @@
   </div>
  </center>
  <p>
-  不少国人在购买奢侈品方面虽有颇为强大的消费能力，但是也需要注意到一点，大家的消费额虽是有了一定增加，储蓄率却是有所下降。
+  “世世代代都住在这里，结果某年来了一帮人，说这不是你家的，然后又认定你家女孩不算人！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,7 +164,7 @@
   </div>
  </center>
  <p>
-  中国的储蓄率一直以来都位于世界的前列，但是最近数年之间，居民的储蓄率却是连年的出现了下降，有相关的数据显示，中国“0”存款的人有5.6亿。除此之外，负债率也有所上升。据有关数据显示，中国的人均负债额已经达到了13万元左右。
+  “我算是知道怎么盘活农村地了，这样盘活的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,11 +179,7 @@
   </div>
  </center>
  <p>
-  看到这里，有些人或许会有这般疑问：存款为“0”的人有5.6亿，14亿人有12亿没有消费能力，是谁“掏空”了老百姓的
-  <span href="https://www.secretchina.com/news/gb/tag/钱袋" target="_blank">
-   钱袋
-  </span>
-  ？国人的财富都流向了何处呢？
+  “这是哪个砖家想出来的，我真想扔一个砖头过去。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -153,11 +193,8 @@
    </center>
   </div>
  </center>
- <p style="text-align: center;">
-  <img alt="谁“掏空”了中国老百姓的钱袋？答案是房子……" src="https://img3.secretchina.com/pic/2020/7-10/p2729482a494025407-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   谁“掏空”了中国老百姓的钱袋？答案是房子……（图片来源：Adobe Stock）
-  </br>
+ <p>
+  “权贵资本家们又盯上农民了，这群嗜血的寄生虫，不搞的天下大乱是不会收手的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -176,7 +213,7 @@
   </ins>
  </center>
  <p>
-  曹德旺可谓直言不讳地表达自己看法，其中的答案即房子。
+  “城市收不到钱，开始到农村割韭菜了！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,7 +228,7 @@
   </div>
  </center>
  <p>
-  根据央行曾发布的一份报告中显示，房子在中国的城镇居民家庭资产中的占比已经达到了7成，而在存在负债的家庭里，房贷在总负债中的占比则超过7成，有76%左右的家庭背上了债务是因为购房。
+  “房产税不收，倒打起农民的主意了！是不是房子没人买，韭菜不够割了！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,7 +243,7 @@
   </div>
  </center>
  <p>
-  此外，该报告中还有数据显示，倒是超前消费盛行的美国，其居民家庭的债务收入比都低于中国，中国是1.02，而美国则是0.93，由此看来，不少人每月赚到的收入基本上大都用作偿还贷款了。
+  “我家河南的，我们村里就没有小于300平的宅基地，全拆了呗？全村解散算了，村长镇长也别当了，去盖房子吧。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -221,7 +258,7 @@
   </div>
  </center>
  <p>
-  房子与其他商品不同，不仅是用于居住的一种必需品，还与结婚、子女上学等诸多事情密切相关，倒是不少人明白，其或许会“掏空”自己的钱袋子，甚至背负多年债务，但还是不能不买……
+  “法治社会，只能上访。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -236,7 +273,22 @@
   </div>
  </center>
  <p>
-  在大家看来，什么限制了你的消费能力？
+  “这帮吃着人民的饭，天天吸人民的血，该死！”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “又一个地方政府官员脑残，估计又会引起一波反抗。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -268,7 +320,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -300,13 +352,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946972.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946972.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946972.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/23/946972.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952585.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952585.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952585.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/15/952585.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/946972.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/952585.md' width='0px' height='0px'/>
