--- a/pages/p3/952628.md
+++ b/pages/p3/952628.md
@@ -1,4 +1,4 @@
-### 美水族馆爆财务危机 捞许愿池硬币400公斤(图)
+### 加拿大连续五年蝉联全球最佳生活质量榜首(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img src="https://img3.secretchina.com/pic/2020/8-24/p2761441a392558376-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/10-17/p2798211a271573447-ss.jpg"/>
   <br>
-   水族馆示意图，与本文无关。（图片来源：Pixabay）
+   加拿大景色（图片来源：Pixabay）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,63 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《通往天安门的旅程》- 36名西方人天安门和平请愿](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月24日讯】不少观光景点都设有
+  【看中国2020年11月15日讯】今年早些时候，
   <strong>
-   许愿池
+   <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
+    加拿大
+   </span>
   </strong>
-  让游客丢
-  <span href="https://www.secretchina.com/news/gb/tag/硬币" target="_blank">
-   硬币
-  </span>
-  许愿，美国一家
+  在全球最佳国家
   <strong>
-   水族馆
+   排名
   </strong>
-  受疫情影响，财务状况告急，于是决定将馆内许愿池累积了14年的硬币捞出来先行应急，结果总共捞出了400公斤重的
+  中名列第二。今天，加拿大连续第五年在全球最佳
   <strong>
-   硬币
+   生活质量
   </strong>
-  ，在花了2周清点后，终于算出总额。
+  排名世界第一。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据WBTV报导，受疫情影响，美国北卡罗来纳州海岸水族馆（NC Aquarium at Pine Knoll Shores）面临财务危机，水族馆本月9日在官方脸书发文，称关闭了馆内9米高的瀑布
-  <span href="https://www.secretchina.com/news/gb/tag/许愿池" target="_blank">
-   许愿池
+  据加西网报导，《美国新闻和世界报告》2020年“
+  <span href="https://www.secretchina.com/news/gb/tag/生活质量" target="_blank">
+   生活质量
   </span>
-  ，清点里面14年来所有游客投下的硬币，水族馆还邀请网友猜测硬币总额。
+  最佳国家”排名数据显示，加拿大生活质量全球排名第一。紧随其后的是一向以高福利著称的北欧国家丹麦和瑞典。
  </p>
  <p>
-  8月22日，水族馆终于公开了民众在瀑布许愿池投下的硬币金额，这批硬币捞出来装桶后足足有100加仑，总金额为8，563.71美元。
+  据数据显示，加拿大已经连续五年获得生活质量
+  <span href="https://www.secretchina.com/news/gb/tag/排名" target="_blank">
+   排名
+  </span>
+  第一的殊荣。加拿大能够连续五年在生活质量方面排名第一，与其稳定的政治环境、社会福利、教育和就业等方面的优势分不开。
  </p>
  <p>
-  水族馆表示，他们低估了清洁、分类和清点所有硬币所需的时间，员工花了10多个小时在银行硬币柜台处理硬币。
- </p>
- <p style="text-align:center">
+  2万名受访者普遍认为，全世界只有一小部分国家有能力给自己的公民提供足够的生活保障，而加拿大就是其中做的最好的。
  </p>
  <p>
-  馆方表示，这笔钱将用以支付水族馆营运和照顾动物的健康，同时也公布猜的最接近的民众。一名叫坎贝尔（Amy Campbell）的女子猜到8，562美元，离正确答案只差一美元。
+  综合来看，北美国家在公共教育体系发达方面排名第四，在就业市场方面排名第二，而加拿大在公共卫生保健方面被认为最发达。
+ </p>
+ <p>
+  10月30日，加拿大移民、难民及公民部长在渥太华对媒体表示，加拿大计划在未来3年引入120万移民（即2021年接纳401000名，2022年接纳411000名，2023年接纳421000名），以填补劳动力市场的空缺，促进经济发展。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -92,7 +85,11 @@
   </div>
  </center>
  <p>
-  贴文发出立刻引来网友热烈讨论，有人留言说，“虽然这很多了，但我本来以为金额会更高”、“解决了硬币短缺的问题”、“里面会不会还有什么贵重物品”。
+  加拿大需要更多工作者，引入移民是一种方法。事实上，在
+  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+   中共病毒
+  </span>
+  (又称新冠状病毒，COVID-19)疫情到加拿大之前，移民一直是加拿大的巨大优势。但由于疫情影响，加拿大移民人数直线下降。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -107,7 +104,37 @@
   </div>
  </center>
  <p>
-  也有网友计算出，以水族馆设立至今14年，许愿池平均1天只有约1.7美元的收入。
+  今年8月，加拿大皇家银行的一项有关“疫情对加拿大移民影响”的报告显示：因封锁政策和旅行限制，加拿大永居人数将暴跌近50%。未来3年移民120万，将可能是挽救加拿大的最后一根救命稻草。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  迁徒而至的移民，往往会带来各自所在国的知识经验和技能，可以创造出新的就业机会，增加对各类商品的需求，从而促进移民国工业的持续发展。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  事实也证明，随着移民数量的增长，加拿大仅吸纳的投资类移民，每年就可以为加拿大带来近20亿元美元的经济贡献。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +166,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -171,13 +198,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/943990.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/943990.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/943990.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/24/943990.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952628.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952628.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952628.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/15/952628.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/943990.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/952628.md' width='0px' height='0px'/>
