同步于: 11月15日10时3分

--- a/pages/p1/952634.md
+++ b/pages/p1/952634.md
@@ -1,4 +1,4 @@
-### 30岁韩女去了一趟星巴克 感染全店27名顾客(图)
+### 中国诗人、作协理事邵燕祥退党声明疑曝光(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="疫情 中共病毒 韩国 星巴克 咖啡" src="https://img3.secretchina.com/pic/2020/8-25/p2761901a38854775-ss.jpg" style="height:399px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="邵燕祥 退党" src="https://img3.secretchina.com/pic/2020/11-15/p2818491a809459184-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   一名戴口罩女子，在星巴克咖啡店拿着一杯咖啡准备就坐。（示意图/非本文图片/图片来源：ROMEO GACAD/AFP via Getty Images）
+   近日中国作协理事
+   <strong>
+    邵燕祥
+   </strong>
+   生前的退党亲笔信疑似曝光。（图片来源：网络图片）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,112 +25,55 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月25日讯】近日，
+  【看中国2020年11月15日讯】11月13日，人权组织“公民力量”副主席韩连潮在推特转发了一份中国诗人、中国作协理事
   <strong>
-   韩国
-  </strong>
-  一家
-  <strong>
-   星巴克
-  </strong>
-  的疫情爆发，震撼了整个国家。一名30岁女子，在感染
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
-    中共病毒
+   <span href="https://www.secretchina.com/news/gb/tag/邵燕祥" target="_blank">
+    邵燕祥
    </span>
-   (又称新冠状病毒，COVID-19)
   </strong>
-  的情况下，来到一家星巴克咖啡店内和朋友聚会。点好咖啡，她在二楼翩然落座，摘下口罩细嘬慢饮，和久未见面的友人打开话匣，滔滔不绝2小时，聊至尽兴，潇洒离开。
+  生前的
+  <strong>
+   退党
+  </strong>
+  亲笔信，引发外界关注。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这位名女子没有想到，在过去的2小时内，她感染了这家小小星巴克内的27名顾客。
- </p>
- <p>
-  据外媒报道，事发当天，一名顾客只是来取个咖啡，排队，点单，等候，取餐，总共10分钟，就在毫无知觉的情况下被拖入病毒深渊，惨遭
-  <span href="https://zh.wikipedia.org/wiki/2019%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92%E7%97%85%E7%96%AB%E6%83%85" target="_blank">
-   感染
+  根据截图显示，邵燕祥于2019年12月17日向中国作协离退休干部党支部书记王璇说明自己
+  <span href="https://www.secretchina.com/news/gb/tag/退党" target="_blank">
+   退党
   </span>
-  。
+  情况。邵燕祥在信中表示，他于2019年1月27日发出声明，正式退出中国共产党组织，并“辞谢一切来人‘做工作’”。
  </p>
  <p>
-  另一名小学生更惨，只是来这家星巴克借用厕所，急急匆匆进店，与正在开心喝咖啡的她擦肩而过，用完厕所后便离开，前后不过5分钟，竟就被她传染了，事后不久发病确诊。
+  韩连潮在转发这封亲笔信的同时写道，“事实上，许多打工党员自行脱党；知名教授专家坚决退党等情况早就存在。中共竭力掩盖党员流失的真相，更恐惧出现前苏共党垮台前的退党潮。但毕竟大江东流去，人心挡不住。为一切积极退党自我救赎，不当中共殉葬品的行动叫好。”
  </p>
- <p>
-  如此恐怖的传播，女子所在的星巴克二层，27名顾客无一幸免，全部中招，只是因为，这名感染女子落座的位置，靠近楼梯口，头顶就是空调，她的飞沫经过冷气裹挟，把病毒吹散到二层的每一个角落，导致所有人无处可逃。
+ <p style="text-align:center">
  </p>
- <p>
-  此外，和大多数咖啡店以及餐馆一样，这家星巴克只有固定的窗户，不能打开，店内通风极差，一个感染者不戴口罩讲话两小时，释放出的病毒很快就能充斥整个空间。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  更悲剧的是，这27名遭到感染的顾客，以及传染源女子，在离开星巴克后带着病毒四处走动，又传染给更多人，截至目前，当地有56人的确诊与星巴克爆发事件有关。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  目前，这家位于京畿道坡州的星巴克，已经关门停业。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这起爆发发生后，
-  <span href="https://www.secretchina.com/news/gb/tag/韩国" target="_blank">
-   韩国
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   最近网上流出中国著名诗人、作家，中国作协理事邵燕祥的退党情况亲笔信。事实上，许多打工党员自行脱党；知名教授专家坚决退党等情况早就存在。中共竭力掩盖党员流失的真相，更恐惧出现前苏共党垮台前的退党潮。但毕竟大江东流去，人心挡不住。为一切积极退党自我救赎，不当中共殉葬品的行动叫好。
+   <span href="https://t.co/oiDTMmrfrS">
+    pic.twitter.com/oiDTMmrfrS
+   </span>
+  </p>
+  — 韩连潮 (@lianchaohan)
+  <span href="https://twitter.com/lianchaohan/status/1327341279672414210?ref_src=twsrc%5Etfw">
+   November 13, 2020
   </span>
-  防疫局对传染源女子的唾液样本进行了分析，发现其唾液病毒含量比一般感染者高出很多，因此锁定她为超级传播者。有媒体甚至将该女子封为“韩国毒后”。
+ </blockquote>
+ <p>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,7 +88,7 @@
   </div>
  </center>
  <p>
-  不过，这起灾难性的超级传播事件中，也有人成功幸存。
+  不过，目前相关消息尚无法得到邵燕祥家属方面证实。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,7 +103,64 @@
   </div>
  </center>
  <p>
-  据报道，这名30岁女子，在一楼买咖啡时，是戴着口罩的，因此没有感染一楼的顾客。随后，她去二楼找座位，摘下口罩，喝咖啡，聊天，喷出的病毒散布整个二层，感染了所有二层顾客。不过有一名星巴克员工，虽然曾上二楼工作，但却佩戴了口罩和手套，没有被感染。
+  有推友在转发相关消息的同时，透露他也已退党，“想年初因疫情换工作之机，我也跟原单位支部负责人说不交党费，算算时间，已经退党，后又在退党网站做出退党
+  <span href="https://www.secretchina.com/news/gb/tag/声明" target="_blank">
+   声明
+  </span>
+  。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据海外
+  <span href="https://www.tuidang.org" target="_blank">
+   退党网站
+  </span>
+  数据显示，截止北京时间2020年11月15日，全球公开声明“退党、退团、退队”的中国人，已达3亿6752万1358人。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  公开资料显示，邵燕祥于1933年出生在北京，1949年中共建政后，曾任中央广播电台编辑、记者。 1953年加入
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  共产党组织，1958年被打成右派，1979年平反。 1978年至1993年在《诗刊》工作，先后担任编辑部主任、副主编。曾任中国作协第三、第四届理事，第四届主席团委员。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “纵览中国”网站曾发表一篇邵燕祥2009年12月追悼翻译家杨宪益的文章。文章开篇写到，他与杨宪益交往20余年，最难忘的场景是杨在1989年冬季在电话中告诉他“我退党了”。邵燕祥在文章中还说，无产阶级专政有“非人道性和反人道性”。 2020年8月1日，邵燕祥去世，享年87岁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +192,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -220,13 +224,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944041.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944041.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944041.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/25/944041.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952634.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952634.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952634.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/15/952634.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/944041.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/952634.md' width='0px' height='0px'/>
